--- a/cmd/starlinkweb/templates/index.html
+++ b/cmd/starlinkweb/templates/index.html
@@ -15,7 +15,7 @@
     {{ end }}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
     <script src="./orb-satellite.v2.min.js"></script>
 
     <style>
@@ -70,6 +70,10 @@
     </div>
 </div>
 <script>
+    import {predictionClient} from "./main.js";
+
+    console.log(predictionClient);
+
     {{ if not .SelfHostedMap }}
     mapboxgl.accessToken = '{{ .TilesKey }}';
     {{ end }}
